docs: update config_full templete

--- a/config_full.ini
+++ b/config_full.ini
@@ -12,7 +12,7 @@ secret_key =
 [dogee-log]
 # Log Level [DEBUG, INFO, ERROR, OFF], Default: ERROR
 log_level = info
-# Dogee Program Log Saving Path, Default: Dogee.log
+# Dogee Program Log Saving Path, e.g. /my/path/to/save/Dogee.log, Default: Dogee.log
 log_savepath = Dogee.log
 
 # dogee 推送服务设置, 多个key用英文逗号分隔 (不需要推送服务需要将整块注释掉)
