feat: support pushover push service

--- a/config_full.ini
+++ b/config_full.ini
@@ -5,8 +5,8 @@
 
 # 多吉云的相关密钥, `必填`
 [doge-cloud-key]
-access_key = 
-secret_key = 
+access_key = abcdefghijklmnopqrstuvwxyz
+secret_key = 0123456789abcdef0123456789abcdef
 
 # dogee 的日志设置
 [dogee-log]
@@ -17,17 +17,20 @@ log_savepath = Dogee.log
 
 # dogee 推送服务设置, 多个key用英文逗号分隔 (不需要推送服务需要将整块注释掉)
 [dogee-push]
-# deer push
-pushdeer_keys = 
+# deer push: https://www.pushdeer.com/
+pushdeer_keys = abcdefghijklmnopqrstuvwxyz1, abcdefghijklmnopqrstuvwxyz2
+# pushover: https://pushover.net/
+pushover_app_token = abcdefghijklmnopqrstuvwxyz
+pushover_user_key = abcdefghijklmnopqrstuvwxyz1, abcdefghijklmnopqrstuvwxyz2
 
 # 多吉云 CDN 日志保存服务
 [doge-cloud-cdn-log-download]
 # 合并下载的日志为同一文件, Default: True
 merge_log = true
 # CDN Log Store Path, Default: ./cdnlog
-cdn_logs_storepath = 
+cdn_logs_storepath = ./cdnlog
 # TimeZone, Default: Asia/Chongqing
-timezone = 
+timezone = Asia/Chongqing
 
 
 
