feat: support check ssl certs status

--- a/config_full.ini
+++ b/config_full.ini
@@ -1,36 +1,36 @@
-# Configuration File for Dogee
-# Version 1.0
+; Configuration File for Dogee
+; Version 1.1
 
-# 注意: 非必填参数均可注释不填, 文件需要在使用前重命名为 `config.ini`
+; 注意: 非必填参数均可注释不填, 文件需要在使用前重命名为 `config.ini`
 
-# 多吉云的相关密钥, `必填`
+; 多吉云的相关密钥, `必填`
 [doge-cloud-key]
 access_key = abcdefghijklmnopqrstuvwxyz
 secret_key = 0123456789abcdef0123456789abcdef
 
-# dogee 的日志设置
+; dogee 的日志设置
 [dogee-log]
-# Log Level [DEBUG, INFO, ERROR, OFF], Default: ERROR
+; Log Level [DEBUG, INFO, ERROR, OFF], Default: ERROR
 log_level = info
-# Dogee Program Log Saving Path, e.g. /my/path/to/save/Dogee.log, Default: Dogee.log
+; Dogee Program Log Saving Path, e.g. /my/path/to/save/Dogee.log, Default: Dogee.log
 log_savepath = Dogee.log
 
-# dogee 推送服务设置, 多个key用英文逗号分隔 (不需要推送服务需要将整块注释掉)
+; dogee 推送服务设置, 多个key用英文逗号分隔 (不需要推送服务需要将整块注释掉)
 [dogee-push]
-# deer push: https://www.pushdeer.com/
+; deer push: https://www.pushdeer.com/
 pushdeer_keys = abcdefghijklmnopqrstuvwxyz1, abcdefghijklmnopqrstuvwxyz2
-# pushover: https://pushover.net/
+; pushover: https://pushover.net/
 pushover_app_token = abcdefghijklmnopqrstuvwxyz
 pushover_user_key = abcdefghijklmnopqrstuvwxyz1, abcdefghijklmnopqrstuvwxyz2
 
-# 多吉云 CDN 日志保存服务
+; 多吉云 CDN 日志保存服务
 [doge-cloud-cdn-log-download]
-# 合并下载的日志为同一文件, Default: True
+; 合并下载的日志为同一文件, Default: True
 merge_log = true
-# CDN Log Store Path, Default: ./cdnlog
+; CDN Log Store Path, Default: ./cdnlog
 cdn_logs_storepath = ./cdnlog
-# TimeZone, Default: Asia/Chongqing
+; TimeZone, Default: Asia/Chongqing
 timezone = Asia/Chongqing
 
-
-
+; 多吉云 SSL 证书过期监测服务
+[doge-cloud-cdn-cert-renew]
